<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".externalstoragefile.EternalStorageFileActivity">
<TextView
    android:id="@+id/tvINFile"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="1dp"
    android:layout_marginLeft="1dp"
    android:gravity="center_horizontal"
    android:text="@string/external_file_demo"
    android:textColor="@color/purple_700"
    android:textSize="20sp"
    app:layout_constraintBottom_toTopOf="@+id/edtFileName"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/edtFileName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/enter_file_name"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@+id/edtFileData"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tvINFile" />

<EditText
    android:id="@+id/edtFileData"
    android:layout_width="0dp"
    android:layout_height="140dp"
    android:ems="10"
    android:gravity="start|top"
    android:maxLines="3"
    android:hint="@string/enter_data_to_write_in_file"
    android:inputType="textMultiLine"
    app:layout_constraintEnd_toEndOf="@+id/edtFileName"
    app:layout_constraintStart_toStartOf="@+id/edtFileName"
    app:layout_constraintTop_toBottomOf="@+id/edtFileName" />

<Button
    android:id="@+id/btnSave"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/save"
    app:layout_constraintStart_toStartOf="@+id/edtFileData"
    app:layout_constraintTop_toBottomOf="@+id/edtFileData" />

<Button
    android:id="@+id/btnView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/view"
    app:layout_constraintEnd_toEndOf="@+id/edtFileData"
    app:layout_constraintTop_toBottomOf="@+id/edtFileData" />
</androidx.constraintlayout.widget.ConstraintLayout>